feat: implement service & view
